chore: automated workflow update
